# Kinio

./: Price.md  README.md  test.js
Server/: .env.sample  .gitignore  graph_viz.py  main.py  pyproject.toml  requirements.txt  test_m.py
Server/LLM/: gemini.py  openai.py
Server/Langraph/: Agent.py  State.py  image.py
Server/Langraph/Nodes/: Code.py  Detect.py  Fix.py  Plan.py  Router.py  Worker.py
Server/Modal/: Setup.py  function.py
Server/Utils/: cloudinary_upload.py
euler/: .gitignore  STRIPE_SETUP.md  drizzle.config.ts  middleware.ts  next.config.mjs  package.json
euler/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
euler/app/dashboard/: client.tsx  layout.tsx  page.tsx  sidebar-wrapper.tsx  sidebar.tsx
euler/app/pricing/: page.tsx
euler/app/reset-password/: page.tsx
euler/app/sign-in/: page.tsx
euler/components/: json-ld-script.tsx  wake-backend.tsx
euler/components/auth/: auth-page.tsx
euler/components/landing/: benefits.tsx  cta-footer.tsx  faq.tsx  features.tsx  hero-mockup.tsx  hero.tsx  logo-cloud.tsx  navbar.tsx  pricing.tsx  scroll-reveal.tsx  showcase.tsx  stats.tsx  testimonials.tsx
euler/components/ui/: 404-page-not-found.tsx  agent-plan.tsx  ai-prompt-box.tsx  confirm-dialog.tsx  scroll-area.tsx
euler/db/: schema.ts
euler/drizzle/: 0000_past_squadron_sinister.sql  0001_bitter_projects.sql  0002_generations.sql  0003_credits.sql
euler/hooks/: use-generate.ts
euler/lib/: auth-client.ts  auth.ts  email-templates.ts  email.ts  json-ld.ts
euler/stores/: workspace-store.ts
(+15 files in other folders)
