[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cloudinary>=1.40.0",
    "fastapi[standard]>=0.136.3",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.2",
    "modal>=1.4.3",
    "pathlib>=1.0.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]
